<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="onButtonClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"

                android:text="@string/title"
                android:textStyle="bold"
                android:textSize="@dimen/activity_vertical_margin"


                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="29dp"
                android:textColor="@color/abc_input_method_navigation_guard" />

           <!-- <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imageView"

                android:scaleType="fitXY"
                android:src="@android:drawable/presence_audio_online"

                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true" /> -->

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:text="@string/start"
                android:onClick="start"


                android:layout_alignTop="@+id/button2"
                android:layout_toLeftOf="@+id/textView"
                android:layout_toStartOf="@+id/textView" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2"

                android:onClick="stop"
                android:text="@string/stop"

                android:layout_marginBottom="91dp"
                android:layout_alignParentBottom="true"
                android:layout_alignLeft="@+id/preview"
                android:layout_alignStart="@+id/preview" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button3"

                android:onClick="play"
                android:text="@string/play"

                android:layout_alignTop="@+id/button2"
                android:layout_toRightOf="@+id/textView"
                android:layout_toEndOf="@+id/textView" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview"
            android:id="@+id/preview"
            android:layout_above="@+id/textView2"
            android:layout_centerHorizontal="true"

            android:onClick="playfile"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="English is my second language"
            android:textSize="20dp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:id="@+id/textView2"
            android:layout_above="@+id/button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textIsSelectable="false"
            android:elegantTextHeight="false" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:id="@+id/previous"
        android:layout_above="@+id/textView2"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/next"
        android:layout_alignTop="@+id/preview"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />

</RelativeLayout>
